# interactor

./: .travis-doc-conf.sh  .travis-doc-key.enc  .travis.yml  Cargo.toml  README.md
examples/: demo.rs
src/: input.rs  interactor.rs  lib.rs  main.rs  pick_from_list.rs
